add animated div

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,9 +12,9 @@ body {
 body {
   background: linear-gradient(250deg, #7b2ff7, #f107a3);
   background-repeat: no-repeat;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .App {
@@ -22,23 +22,82 @@ body {
   text-align: center;
 }
 
-.parent {
-  background: white;
-  width: 100px;
-  height: 100px;
+.flexRow {
   display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+.flexColumn {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+}
+.flexCenter {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
   justify-content: center;
+}
+.flexStretch {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+.stretch {
+  align-items: stretch;
+}
+.alignCenter {
   align-items: center;
 }
-
-.parent[data-isOpen="true"] {
-  width: 300px;
-  height: 300px;
+.flexStart {
+  align-items: flex-start;
+}
+.flexEnd {
+  align-items: flex-end;
+}
+.spaceBetween {
+  justify-content: space-between;
+}
+.spaceAround {
+  justify-content: space-around;
+}
+.justifyStart {
+  justify-content: flex-start;
+}
+.justifyEnd {
+  justify-content: flex-end;
+}
+.justifyCenter {
+  justify-content: center;
+}
+.stretchSelf {
+  align-self: stretch;
+}
+.flexEndSelf {
+  align-self: flex-end;
+}
+.centerSelf {
+  align-self: center;
+}
+.flex1 {
+  flex: 1;
+}
+.wrap {
+  flex-wrap: wrap;
+}
+.nowrap {
+  flex-wrap: nowrap;
+}
+.shrink0 {
+  flex-shrink: 0;
+}
+.shrink1 {
+  flex-shrink: 1;
 }
 
-.child {
-  width: 40px;
-  height: 40px;
-  background: #f107a3;
-  border-radius: 50%;
+.flexItem {
+  padding: 10px;
 }
